--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9381af">  <td>22/06/11 22:37:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseClass.start()[pri:0, instance:com.ecommerce.testCases.BaseClass@2f7298b]">start</td> 
+<tr bgcolor="f7d0bd">  <td>22/06/20 02:17:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AutoSearchTest_001.AutoSearchTest()[pri:0, instance:com.ecommerce.testCases.TC_AutoSearchTest_001@694abbdc]">AutoSearchTest</td> 
   <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="918c79">  <td>22/06/20 02:17:50</td>   <td>-8517</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.ecommerce.testCases.TC_AutoSearchTest_001@694abbdc]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
