--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.ecommerce.testCases.TC_AutoSearchTest_001" class="method navigator-link" hash-for-method="AutoSearchTest">AutoSearchTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.ecommerce.testCases.TC_DatePickerTest_002" class="method navigator-link" hash-for-method="DataPickerTest">DataPickerTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.ecommerce.testCases.TC_AutoSearchTest_001</span>
+              <span class="class-name">com.ecommerce.testCases.TC_DatePickerTest_002</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AutoSearchTest">
-                  </a> <!-- AutoSearchTest -->
-                  <span class="method-name">AutoSearchTest</span>
+                  <a name="DataPickerTest">
+                  </a> <!-- DataPickerTest -->
+                  <span class="method-name">DataPickerTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,6 +147,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;com.ecommerce.testCases.TC_DatePickerTest_002&quot;/&gt;
       &lt;class name=&quot;com.ecommerce.testCases.TC_AutoSearchTest_001&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
@@ -161,7 +162,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -189,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AutoSearchTest')
-data.setCell(0, 2, 'com.ecommerce.testCases.TC_AutoSearchTest_001')
-data.setCell(0, 3, 155);
+data.setCell(0, 1, 'DataPickerTest')
+data.setCell(0, 2, 'com.ecommerce.testCases.TC_DatePickerTest_002')
+data.setCell(0, 3, 6071);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 155 ms</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -211,9 +212,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.ecommerce.testCases.TC_AutoSearchTest_001</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">AutoSearchTest</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Suite" class="panel">
@@ -222,14 +230,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.ecommerce.testCases.TC_AutoSearchTest_001</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.ecommerce.testCases.TC_DatePickerTest_002</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">AutoSearchTest</span>
-                <span class="method-start">8527 ms</span>
+                <span class="method-name">DataPickerTest</span>
+                <span class="method-start">15663 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
